@@ -41,17 +41,17 @@ beb55085de49d23665272a0db65d1dff *man/summary.lm.rrpp.Rd
 17345e78d64e3b5f2464251c3482febf *man/summary.pairwise.Rd
 73f2a913f66ac6af76747a7cd93c9070 *man/summary.predict.lm.rrpp.Rd
 4a5f3b38a265069b773db6748908488b *NAMESPACE
-defd4bb0afb20db9a66a5eb9195dd8ee *NEWS
+86ea4676853eab04fde03ca50f62c0c2 *NEWS
 262059f161b3a6bef292cdd97fc9c414 *R/anova.lm.rrpp.r
 c2cda15833b34d15cbc97c9cd4530666 *R/classify.r
 52536f21f7ea4cdcfa3ebfe15b4ffbac *R/coef.lm.rrpp.r
 30b9c3e190a2c2f4290be6df7d9216be *R/lm.rrpp.r
-abd8f0e4c5475c2b0bcda82b9878fcc4 *R/manova.update.r
+7a3a6796f8ff2678c2cf187b5274cbb5 *R/manova.update.r
 d0c2e9bfde3601544d96c22161e1e4ae *R/model.comparison.r
 aadeaa80e40a91ea7d57d7fda254141a *R/pairwise.r
 2842c35d4b0d9cac9efff813dbf2115d *R/predict.lm.rrpp.r
 b185732728e1eb2112e81fb2aee9b8fe *R/RRPP.support.code.r
-d2d41ca1707848a01f8d9ae03c57365b *R/RRPP.utils.r
+bfa04691d172b61be51c6848342e49e6 *R/RRPP.utils.r
 987d403df491c09b6db91776c4443a53 *README.md
 7db72b7e01004751c5cf9d9eb2c9122c *RRPP.Rproj
 597d993e67557b7e47629ea98a6e2b14 *vignettes/Collyer.Adams.2018.MEE.Appendix.S2.Rmd
